---------------------------------------------------------------------------------------------------
Version: 1.4.3
  Changes:
    - Cosmetics
    - Fixed missing buildings
---------------------------------------------------------------------------------------------------
Version: 1.4.2
  Changes:
    - Fixed tech tree.
---------------------------------------------------------------------------------------------------
Version: 1.4.1
  Changes:
    - Added MK levels when pyRO detected.
---------------------------------------------------------------------------------------------------
Version: 1.4.0
  Changes:
    - Some diamond balances.
---------------------------------------------------------------------------------------------------
Version: 1.3.9
  Changes:
    - Speed up diamond steps.
    - Reduced centrifucal pan speed a bit.
---------------------------------------------------------------------------------------------------
Version: 1.3.8
  Changes:
    - Cosmetic updates.
---------------------------------------------------------------------------------------------------
Version: 1.3.7
  Changes:
    - Cosmetic updates.
    - Reduced tailings dust in some vanadium recipes.
    - Speed up a bit the screeners.
---------------------------------------------------------------------------------------------------
Version: 1.3.5
  Changes:
    - Removed hability to add modules in buildings recipes.
---------------------------------------------------------------------------------------------------
Version: 1.3.4
  Changes:
    - Fixed for new factorio version.
---------------------------------------------------------------------------------------------------
Version: 1.3.2
  Changes:
    - Balanced helium.
---------------------------------------------------------------------------------------------------
Version: 1.3.0
  Changes:
    - Migration.
---------------------------------------------------------------------------------------------------
Version: 1.2.9